[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/intro.gd" type="Script" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Scoreboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/invader/invader-large-frame1.png" type="Texture" id=4]
[ext_resource path="res://sprites/invader/invader-mid-frame1.png" type="Texture" id=5]
[ext_resource path="res://sprites/invader/invader-small-frame1.png" type="Texture" id=6]
[ext_resource path="res://sprites/mothership/mothership.png" type="Texture" id=7]
[ext_resource path="res://space_invaders.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 8
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=4]
length = 19.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("text-holder/play_text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("text-holder/space_invaders_text:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("invader-sprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6.95116 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("text-holder/score_advance_text:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("text-holder/mystery_text_left:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 6.99773, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("text-holder/mystery_text_right:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 8, 9.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("text-holder/30_points_text_left:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 9.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("text-holder/30_points_text_right:percent_visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 11, 12.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("text-holder/20_points_text_left:percent_visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 12.5, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("text-holder/20_points_text_right:percent_visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 14, 15.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("text-holder/10_points_text_left:percent_visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 15.5, 17 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("text-holder/10_points_text_right:percent_visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 17, 18.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "launch_main"
} ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]
z_index = -2

[node name="Scoreboard" parent="." instance=ExtResource( 3 )]
z_index = 10

[node name="invader-sprites" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="invader-large-frame1" type="Sprite" parent="invader-sprites"]
position = Vector2( 73.4296, 183.533 )
texture = ExtResource( 4 )

[node name="invader-mid-frame1" type="Sprite" parent="invader-sprites"]
position = Vector2( 73.4667, 169.533 )
texture = ExtResource( 5 )

[node name="invader-small-frame1" type="Sprite" parent="invader-sprites"]
position = Vector2( 72.9728, 154.336 )
texture = ExtResource( 6 )

[node name="mothership" type="Sprite" parent="invader-sprites"]
position = Vector2( 72.4296, 139.2 )
texture = ExtResource( 7 )

[node name="text-holder" type="Node2D" parent="."]
editor/display_folded = true
z_index = 1

[node name="mystery_text_left" type="Label" parent="text-holder"]
anchor_right = 0.39
margin_left = 83.0
margin_top = 136.0
margin_right = 99.0
margin_bottom = 147.0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "= ?"
percent_visible = 0.0

[node name="mystery_text_right" type="Label" parent="text-holder"]
anchor_right = 0.39
margin_left = 100.0
margin_top = 136.0
margin_right = 153.0
margin_bottom = 147.0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "MYSTERY "
align = 2
percent_visible = 0.0

[node name="30_points_text_left" type="Label" parent="text-holder"]
margin_left = 83.0
margin_top = 150.0
margin_right = 106.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "= 30"
percent_visible = 0.0

[node name="30_points_text_right" type="Label" parent="text-holder"]
margin_left = 112.593
margin_top = 150.0
margin_right = 151.593
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
text = "POINTS"
align = 2
percent_visible = 0.0

[node name="20_points_text_left" type="Label" parent="text-holder"]
margin_left = 83.0
margin_top = 165.0
margin_right = 106.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "= 20"
percent_visible = 0.0

[node name="20_points_text_right" type="Label" parent="text-holder"]
margin_left = 112.333
margin_top = 165.0
margin_right = 151.333
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "POINTS"
align = 2
percent_visible = 0.0

[node name="10_points_text_left" type="Label" parent="text-holder"]
margin_left = 84.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 191.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "= 10"
align = 3
percent_visible = 0.0

[node name="10_points_text_right" type="Label" parent="text-holder"]
margin_left = 112.0
margin_top = 180.0
margin_right = 151.0
margin_bottom = 191.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "POINTS"
align = 3
percent_visible = 0.0

[node name="score_advance_text" type="Label" parent="text-holder"]
margin_left = 1.0
margin_top = 112.0
margin_right = 223.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "*SCORE  ADVANCE  TABLE*"
align = 1

[node name="space_invaders_text" type="Label" parent="text-holder"]
margin_top = 80.0
margin_right = 224.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "SPACE   INVADERS"
align = 1
percent_visible = 0.0

[node name="play_text" type="Label" parent="text-holder"]
margin_top = 61.0
margin_right = 223.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "PLAY"
align = 1
percent_visible = 0.5

[node name="Get_ready_text" type="Label" parent="text-holder"]
margin_top = 61.0
margin_right = 223.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "GET READY!"
align = 1

[node name="LEFT KEY" type="Label" parent="text-holder"]
visible = false
margin_left = 50.0
margin_top = 200.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Z KEY = MOVE LEFT"
align = 1

[node name="RIGHT KEY" type="Label" parent="text-holder"]
visible = false
margin_left = 50.0
margin_top = 215.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "C KEY = MOVE Right"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/main_text = SubResource( 4 )
anims/screen_wipe = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 11.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
